# picograd

./: .gitignore  README.md  pyproject.toml  setup.py
notebooks/: autograd_test.ipynb
picograd/: core.py
picograd/autodiff/: __init__.py  core.py  diffops.py  viz.py
