[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "picograd"
version = "0.0.1"
authors = [
  { name="Sidharth Baskaran", email="sidnbaskaran@gmail.com" },
]
description = "A lightweight deep learning framework with a focus on a simple and intuitive API and GPU support."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sidnb13/picograd"
"Bug Tracker" = "https://github.com/sidnb13/picograd/issues"